k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cns-edge-service
  labels:
    app: cns-edge-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cns-edge-service
  template:
    metadata:
      labels:
        app: cns-edge-service
    spec:
      containers:
        - name: cns-edge-service
          image: cns-edge-service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
          lifecycle:
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 5" ] #Makes Kubernetes wait 5 seconds before sending the SIGTERM signal to the Pod - facilitating graceful shutdown
